@@ -25,8 +25,11 @@ reportbug (4.10.3) UNRELEASED; urgency=low
       Closes: #221548
   * doc/README.Users
     - document how to add a pseudo-header
+  * reportbug/utils.py
+    - recognize also files in /var/lib/dpkg/info/, identifying the package they
+      belong to; thanks to Dan Jacobson for the report; Closes: #230582
 
- -- Sandro Tosi <morph@debian.org>  Sat, 06 Mar 2010 10:18:09 +0100
+ -- Sandro Tosi <morph@debian.org>  Sat, 06 Mar 2010 11:37:43 +0100
 
 reportbug (4.10.2) unstable; urgency=low
 
